--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
 node_modules/
 /test-results/
 /playwright-report/
+/blob-report/
 /playwright/.cache/
-/test-results/
-/playwright-report/
-/playwright/.cache/
-/test-results/
-/playwright-report/
-/playwright/.cache/
-/test-results/
-/playwright-report/
-/playwright/.cache/
-.vscode
-/.github/workflows/playwright.yml
