--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "playwrightbegineers",
+  "name": "playwright-beginners",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "@playwright/test": "^1.31.2"
-  }
+    "@playwright/test": "^1.41.1",
+    "@types/node": "^20.11.5"
+  },
+  "scripts": {}
 }
